--- a/.github/workflows/gitops-build-push-supermario-image.yaml
+++ b/.github/workflows/gitops-build-push-supermario-image.yaml
@@ -1,9 +1,39 @@
-name: "Build and push Super Mario Docker image with static tag to Docker Hub"
+# name: "Build and push Super Mario Docker image with static tag to Docker Hub"
+ 
+# on:
+#   push:
+#     branches:
+#       - master
+  
+# jobs:
+  
+#   build_push_supermario_docker_image:
+#     runs-on: ubuntu-latest
+ 
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v3
+  
+#       - name: Login to Docker Hub
+#         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+ 
+#       - name: Build and Push Docker Image
+#         run: |
+#           docker build -t docker.io/pkcloud/supermariogitopsproject:1 .
+#           docker push docker.io/pkcloud/supermariogitopsproject:1
+
+
+#################################################################################################################
+
+name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
  
 on:
   push:
     branches:
       - master
+ 
+env:
+  VERSION: $(( $(cat version.txt) + 1 ))     ##### Dynamic Tag  (Note : Why +1 here, we already build one image eariler with static tag)
   
 jobs:
   
@@ -13,11 +43,12 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
-  
+   
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
  
       - name: Build and Push Docker Image
         run: |
-          docker build -t docker.io/pkcloud/supermariogitopsproject:1 .
-          docker push docker.io/pkcloud/supermariogitopsproject:1
+          docker build -t docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
+          docker push docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
+
