--- a/.github/workflows/gitops-build-push-supermario-image.yaml
+++ b/.github/workflows/gitops-build-push-supermario-image.yaml
@@ -88,7 +88,7 @@ jobs:
       - name: Run Trivy vulnerability scanner in tarball mode  ## This will scan the Docker image saved as a tar file
         uses: aquasecurity/trivy-action@master
         with:
-          input: /github/workspace/supermariolatestdockerimage.tar      ## Path to the Docker image tar file on Github workspace
+          input: ${{ github.workspace }}/supermariolatestdockerimage.tar      ## Path to the Docker image tar file on Github workspace
           exit-code: '0'
           severity: 'CRITICAL,HIGH'
 
