--- a/.github/workflows/gitops-build-push-supermario-image.yaml
+++ b/.github/workflows/gitops-build-push-supermario-image.yaml
@@ -26,39 +26,9 @@
 
 
 #################################################################################################################
-# 2  :  dynamic tag lab
+#2  :  dynamic tag lab
 
-# name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
- 
-# on:
-#   push:
-#     branches:
-#       - master
- 
-# env:
-#   VERSION: $(( $(cat version.txt) + 1 ))     ##### Dynamic Tag  (Note : Why +1 here, we already build one image eariler with static tag)
-  
-# jobs:
-  
-#   build_push_supermario_docker_image:
-#     runs-on: ubuntu-latest
- 
-#     steps:
-#       - name: Checkout Repository
-#         uses: actions/checkout@v3
-   
-#       - name: Login to Docker Hub
-#         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
- 
-#       - name: Build and Push Docker Image
-#         run: |
-#           docker build -t docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }} .
-#           docker push docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
-
-#################################################################################################################
-# 3  :  container scan lab and save image as tar file in Gihub workspace.
-
-name: "Run Container Scan on Super Mario Docker Image with Quality Gate"
+name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
  
 on:
   push:
@@ -66,30 +36,60 @@ on:
       - master
  
 env:
-  VERSION: $(( $(cat version.txt) + 1 ))
+  VERSION: $(( $(cat version.txt) + 1 ))     ##### Dynamic Tag  (Note : Why +1 here, we already build one image eariler with static tag)
   
 jobs:
   
-  run_container_image_scan_on_supermario_docker_image:
-    runs-on: ubuntu-latest	
+  build_push_supermario_docker_image:
+    runs-on: ubuntu-latest
  
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
- 
+   
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-        
-      - name: Get Docker Image from Docker Hub
+ 
+      - name: Build and Push Docker Image
         run: |
-          docker pull docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
-          docker save -o $GITHUB_WORKSPACE/supermariolatestdockerimage.tar docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
+          docker build -t docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }} .
+          docker push docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
+
+#################################################################################################################
+# 3  :  container scan lab and save image as tar file in Gihub workspace.
+
+# name: "Run Container Scan on Super Mario Docker Image with Quality Gate"
+ 
+# on:
+#   push:
+#     branches:
+#       - master
+ 
+# env:
+#   VERSION: $(( $(cat version.txt) + 1 ))
+  
+# jobs:
+  
+#   run_container_image_scan_on_supermario_docker_image:
+##     runs-on: ubuntu-latest	
+ 
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v3
+ 
+#       - name: Login to Docker Hub
+#         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+        
+#       - name: Get Docker Image from Docker Hub
+#         run: |
+#           docker pull docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
+#           docker save -o $GITHUB_WORKSPACE/supermariolatestdockerimage.tar docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
      
-      - name: Run Trivy vulnerability scanner in tarball mode  ## This will scan the Docker image saved as a tar file
-        uses: aquasecurity/trivy-action@master
-        with:
-          input: ${{ github.workspace }}/supermariolatestdockerimage.tar      ## Path to the Docker image tar file on Github workspace
-          exit-code: '1'
-          severity: 'CRITICAL,HIGH'
+#       - name: Run Trivy vulnerability scanner in tarball mode  ## This will scan the Docker image saved as a tar file
+#         uses: aquasecurity/trivy-action@master
+#         with:
+#           input: ${{ github.workspace }}/supermariolatestdockerimage.tar      ## Path to the Docker image tar file on Github workspace
+#           exit-code: '1'
+#           severity: 'CRITICAL,HIGH'
 
 #################################################################################################################
