--- a/.github/workflows/gitops-build-push-supermario-image.yaml
+++ b/.github/workflows/gitops-build-push-supermario-image.yaml
@@ -35,8 +35,8 @@ on:
     branches:
       - master
  
-env:
-  VERSION: $(( $(cat version.txt) + 2 ))     ##### Dynamic Tag  (Note : Why +1 here, we already build one image eariler with static tag)
+#env:
+#  VERSION: $(( $(cat version.txt) + 1 ))     ##### Dynamic Tag  (Note : Why +1 here, we already build one image eariler with static tag)
   
 jobs:
   
@@ -52,8 +52,8 @@ jobs:
  
       - name: Build and Push Docker Image
         run: |
-          docker build -t docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }} .
-          docker push docker.io/pkcloud/supermariogitopsproject:${{ env.VERSION }}
+          docker build -t docker.io/pkcloud/supermariogitopsproject:${TAG} .
+          docker push docker.io/pkcloud/supermariogitopsproject:${TAG}
 
 #################################################################################################################
 # 3  :  container scan lab and save image as tar file in Gihub workspace.
