--- a/.github/workflows/gitops-build-push-supermario-image.yaml
+++ b/.github/workflows/gitops-build-push-supermario-image.yaml
@@ -28,7 +28,7 @@
 #################################################################################################################
 #2  :  dynamic tag lab
 
-name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
+name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"  # Updated code
  
 on:
   push:
