--- a/.github/workflows/gitops-build-push-supermario-image.yaml
+++ b/.github/workflows/gitops-build-push-supermario-image.yaml
@@ -28,34 +28,33 @@
 #################################################################################################################
 #2  :  dynamic tag lab
 
-name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub" 
+# name: "Build and push Super Mario Docker image with dynamic tag to Docker Hub"
  
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - main
  
-#env:
-#  VERSION: $(( $(cat version.txt) + 1 ))     ##### Dynamic Tag  (Note : Why +1 here, we already build one image eariler with static tag)
+# env:
+#   VERSION: $(( $(cat version.txt) + 1 ))
   
-jobs:
+# jobs:
   
-  build_push_supermario_docker_image:
-    runs-on: ubuntu-latest
+#   build_push_supermario_docker_image:
+#     runs-on: ubuntu-latest
  
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout Repository
+#         uses: actions/checkout@v3
    
-      - name: Login to Docker Hub
-        run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+#       - name: Login to Docker Hub
+#         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
  
-      - name: Build and Push Docker Image
-        env:
-          TAG: ${{ github.run_number }}
-        run: |
-          docker build -t docker.io/pkcloud/supermariogitopsproject:${TAG} .
-          docker push docker.io/pkcloud/supermariogitopsproject:${TAG}
+#       - name: Build and Push Docker Image
+#         run: |
+#           docker build -t docker.io/raghuthesecurityexpert/supermariogitopsproject:${{ env.VERSION }} .
+#           docker push docker.io/raghuthesecurityexpert/supermariogitopsproject:${{ env.VERSION }}
+
 
 #################################################################################################################
 # 3  :  container scan lab and save image as tar file in Gihub workspace.
@@ -73,7 +72,7 @@ jobs:
 # jobs:
   
 #   run_container_image_scan_on_supermario_docker_image:
-##     runs-on: ubuntu-latest	
+#     runs-on: ubuntu-latest	
  
 #     steps:
 #       - name: Checkout Repository
